Bug 1184141 - In-page filter-bar options are misaligned

--- a/src/media/css/content-filter.styl
+++ b/src/media/css/content-filter.styl
@@ -33,12 +33,6 @@
         justify-content: flex-start;
         position: relative;
 
-        +ltr() {
-            padding-left: 15px;
-        }
-        +rtl() {
-            padding-right: 15px;
-        }
         &:after {
             color: $action-positive;
             position: absolute;
